Лишний класс был указан у кнопок скипа

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -75,7 +75,7 @@
     <tr>
         <th>График</th>
         <td>
-            <input type="text" class="pointadding-item-worktime m_width_full" value="{$claim.cp_worktime}" class="m_width_full" />
+            <input type="text" class="pointadding-item-worktime m_width_full" value="{$claim.cp_worktime}" />
         </td>
     </tr>
     <tr>
@@ -97,9 +97,9 @@
     </tr>
     <tr>
         <td colspan="2" class="pointadding-item-analogs-ignore m_center">
-            <input type="button" class="pointadding-item-confirm m_color_red" value="Не подходит" data-state="8" />
+            <input type="button" class="pointadding-item-skip m_color_red" value="Не подходит" data-state="8" />
             &nbsp;&nbsp;&nbsp;
-            <input type="button" class="pointadding-item-confirm m_color_red" value="Спам" data-state="7" />
+            <input type="button" class="pointadding-item-skip m_color_red" value="Спам" data-state="7" />
         </td>
         <td class="m_center">
             <input type="button" class="pointadding-item-confirm m_color_green" value="Внести" />
