Спамные кнопки сдвигаем

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -90,13 +90,13 @@
     </tr>
     <tr>
         <td colspan="2" class="m_center">
-            <input type="button" class="pointadding-item-save" value="Сохранить" data-state="25" data-return="1" />
+            <input type="button" class="pointadding-item-save m_color_green" value="Сохранить" data-state="25" data-return="1" />
             &nbsp;&nbsp;&nbsp;
             <a href="?">вернуться</a>
         </td>
     </tr>
     <tr>
-        <td colspan="2" class="pointadding-item-analogs-ignore m_center">
+        <td colspan="2" class="pointadding-item-analogs-ignore">
             <input type="button" class="pointadding-item-skip m_color_red" value="Не подходит" data-state="8" />
             &nbsp;&nbsp;&nbsp;
             <input type="button" class="pointadding-item-skip m_color_red" value="Спам" data-state="7" />
