Разбираем список ссылок, see #16

--- a/templates/_admin/parser.start.sm.html
+++ b/templates/_admin/parser.start.sm.html
@@ -5,6 +5,7 @@
     <input type="text" class="parser-start-url" value="" />
     <input type="button" class="parser-start-run" value="Разобрать" />
 </div>
+<div class="parser-work-container"></div>
 
 <script type="text/javascript" src="/js/admin/parser.js" defer="defer"></script>
 <style type="text/css">
