--- a/templates/_admin/pointadding.list.sm.html
+++ b/templates/_admin/pointadding.list.sm.html
@@ -15,7 +15,7 @@
     <tr>
         <td>&nbsp;</td>
         <td>
-            <select name="type" style="width:100px;">
+            <select name="type" style="width:80px;" onchange="submit();">
                 <option value="0">--все--</option>
                 {foreach from=$ref_pt item=pt}
                 <option value="{$pt.tp_id}">{$pt.tp_short}</option>
@@ -24,14 +24,14 @@
         </td>
         <td>&nbsp;</td>
         <td>
-            <select name="pcid" style="width:200px;">
+            <select name="pcid" style="width:200px;" onchange="submit();">
                 <option value="0">--все--</option>
             </select>
         </td>
         <td>&nbsp;</td>
         <td>&nbsp;</td>
         <td>
-            <select name="state" style="width:100px;">
+            <select name="state" style="width:80px;" onchange="submit();">
                 <option value="0">--все--</option>
                 {foreach from=$ref_st item=st}
                 <option value="{$st.uv_id}">{$st.uv_title}</option>
