Реферер на форме обработки

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -1,6 +1,8 @@
 <img class="pageicon" src="/img/admin/ico.a_refs.gif" />
 <h3>{$title}</h3>
 
+<input type="hidden" id="pointadding-item-referer" value="{$referer}" />
+
 <table class="detailtable">
     <tr>
         <th>Название</th>
