canonical с хостом и протоколом

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -16,7 +16,7 @@
                 <link rel="search" href="/search/" />
                 <link rel="alternate" href="{$page->globalsettings.main_rss}" type="application/rss+xml" title="RSS blog" />
                 {if $page->canonical}
-                <link rel="canonical" href="{$page->canonical}" />
+                <link rel="canonical" href="https://culttourism.ru{$page->canonical}" />
                 {/if}
                 <!--[if lt IE 9]>
                     <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
