Фиксируем размеры блока до переключения

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -141,6 +141,12 @@
     #pointadding-item-geo-lat, #pointadding-item-geo-lon {
         width:80px;
     }
+    .pointadding-item-textcontainer {
+        width: 656px;
+    }
+    .pointadding-item-mapcontainer {
+        width: 656px;
+    }
     .pointadding-item-map {
         height: 300px;
         width: 654px;
