Ссылка на установленную страницу добавления

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -36,7 +36,7 @@
             <a href="#" class="pointadding-item-city-typed" title="Как ввел пользователь">{$claim.cp_city|escape:'html'} =></a>
             <input type="hidden" id="pointadding-item-city-pcid" value="{$claim.cp_citypage_id}" />
             <input type="text" class="pointadding-item-city-suggest m_hide" value="{$claim.cp_city|escape:'html'}" />
-            <span class="pointadding-item-city-pctitle"></span>
+            <a href="#" class="pointadding-item-city-pctitle" target="_blank"></a>
         </td>
     </tr>
     <tr>
