--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -66,7 +66,7 @@
             <input type="text" class="pointadding-item-addr" value="{$claim.cp_addr|escape:'html'}" />
         </td>
         <td class="pointadding-item-analogs-ignore m_center">
-            <input type="button" value="уже есть" data-state="5" />
+            <input type="button" class="m_color_red" value="уже есть" data-state="5" />
         </td>
     </tr>
     <tr>
