--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -29,6 +29,9 @@
             </table>
         </div>
     </div>
+    {if $city.pc_announcement}
+    <div id="city_announcement">{$city.pc_announcement}</div>
+    {/if}
     {$city.pc_text}
 </div>
 
