--- a/templates/city/details.sm.html
+++ b/templates/city/details.sm.html
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <td nowrap>красивый анонс</td>
-                <td colspan="3"><textarea name="anons" id="city_anons" style="width:99%;height:40px;">{$city.pc_announcement}</textarea></td>
+                <td colspan="3"><textarea name="anons" id="city_anons" style="width:99%;">{$city.pc_announcement}</textarea></td>
                 <td><span class="city_form_hint" id="city_sign_anons" title="обычно 150-200">0</span></td>
             </tr>
             <tr>
