--- a/templates/city/details.sm.html
+++ b/templates/city/details.sm.html
@@ -87,6 +87,12 @@
     </table>
 </div>
 
+<div style="width:250px; margin:5px auto; border:1px solid #777; padding: 4px;">
+    <img src="/img/yandex.png" alt="Поиск от Яндекс" style="vertical-align:middle; float:left; margin: 5px;">
+    Вес: {$yandex.ws_weight_min} < {$yandex.ws_weight} < {$yandex.ws_weight_max}<br />
+    Позиция: {$yandex.ws_position}
+</div>
+
 <style>
     td {
         vertical-align: top;
