--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -64,7 +64,82 @@
                     </div><!-- #wrapper -->
                     <footer id="footer">
                         <div id="footer_conters">
-                            <!--noindex-->{$page->counters}<!--/noindex-->
+                            <!--noindex-->{literal}
+                            <!-- Yandex.Metrika counter -->
+                            <script type="text/javascript">(function (d, w, c) {
+                                    (w[c] = w[c] || []).push(function () {
+                                        try {
+                                            w.yaCounter1209661 = new Ya.Metrika({id: 1209661, webvisor: true, clickmap: true, trackLinks: true, accurateTrackBounce: true});
+                                        } catch (e) {
+                                        }
+                                    });
+                                    var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () {
+                                        n.parentNode.insertBefore(s, n);
+                                    };
+                                    s.type = "text/javascript";
+                                    s.async = true;
+                                    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+                                    if (w.opera == "[object Opera]") {
+                                        d.addEventListener("DOMContentLoaded", f, false);
+                                    } else {
+                                        f();
+                                    }
+                                })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/1209661" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+                            <!-- /Yandex.Metrika counter -->
+                            <script>  (function (i, s, o, g, r, a, m) {
+                                    i['GoogleAnalyticsObject'] = r;
+                                    i[r] = i[r] || function () {
+                                        (i[r].q = i[r].q || []).push(arguments)
+                                    }, i[r].l = 1 * new Date();
+                                    a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+                                    a.async = 1;
+                                    a.src = g;
+                                    m.parentNode.insertBefore(a, m)
+                                })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+                                ga('create', 'UA-6799673-8', 'culttourism.ru');
+                                ga('send', 'pageview');</script>
+                            <!--LiveInternet counter-->
+                            <script type="text/javascript">document.write("<a href='http://www.liveinternet.ru/click' target=_blank><img src='//counter.yadro.ru/hit?t44.11;r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";" + Math.random() + "' border=0 width=31 height=31 alt='' title='LiveInternet'><\/a>")</script>
+                            <!--/LiveInternet-->
+                            <!-- Rating@Mail.ru counter -->
+                            <script type="text/javascript">
+                                var _tmr = _tmr || [];
+                                _tmr.push({id: "1909945", type: "pageView", start: (new Date()).getTime()});
+                                (function (d, w) {
+                                    var ts = d.createElement("script");
+                                    ts.type = "text/javascript";
+                                    ts.async = true;
+                                    ts.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//top-fwz1.mail.ru/js/code.js";
+                                    var f = function () {
+                                        var s = d.getElementsByTagName("script")[0];
+                                        s.parentNode.insertBefore(ts, s);
+                                    };
+                                    if (w.opera == "[object Opera]") {
+                                        d.addEventListener("DOMContentLoaded", f, false);
+                                    } else {
+                                        f();
+                                    }
+                                })(document, window);
+                            </script><noscript><div style="position:absolute;left:-10000px;">
+                                    <img src="//top-fwz1.mail.ru/counter?id=1909945;js=na" style="border:0;" height="1" width="1" alt="Рейтинг@Mail.ru" />
+                                </div></noscript>
+                            <!-- //Rating@Mail.ru counter -->
+                            <!-- Rating@Mail.ru logo -->
+                            <a href="http://top.mail.ru/jump?from=1909945">
+                                <img src="//top-fwz1.mail.ru/counter?id=1909945;t=361;l=1" 
+                                     style="border:0;" height="18" width="88" alt="Рейтинг@Mail.ru" /></a>
+                            <!-- //Rating@Mail.ru logo -->
+                            <script type="text/javascript">
+                                (function () {
+                                    var po = document.createElement("script");
+                                    po.type = "text/javascript";
+                                    po.async = true;
+                                    po.src = "https://apis.google.com/js/plusone.js?publisherid=117404297355805272681";
+                                    var s = document.getElementsByTagName("script")[0];
+                                    s.parentNode.insertBefore(po, s);
+                                })();
+                            </script>
+                        {/literal}<!--/noindex-->
                         </div>
                         <div id="footer_debug">
                             {$debug_info}
