--- a/templates/_pages/pagecity.edit.sm.html
+++ b/templates/_pages/pagecity.edit.sm.html
@@ -172,4 +172,5 @@
 <input type="hidden" id="mapcity_pc_latitude" value="{$city.pc_latitude}" />
 <input type="hidden" id="mapcity_pc_longitude" value="{$city.pc_longitude}" />
 <input type="hidden" id="mapcity_pc_zoom" value="{$city.pc_zoom}" />
+<input type="hidden" id="mapcity_pc_osmid" value="{$city.pc_osm_id}" />
 {/if}
