Выдаем в шаблон код страны по ИСО (show), see #20

--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -170,6 +170,7 @@
 <input type="hidden" id="mapcity_pc_longitude" value="{$city.pc_longitude}" />
 <input type="hidden" id="mapcity_pc_zoom" value="{$city.pc_zoom}" />
 <input type="hidden" id="mapcity_pc_osmid" value="{$city.pc_osm_id}" />
+<input type="hidden" id="mapcity_pc_country" value="{$city.pc_country_code}" />
 {/if}
 
 <div id="yandex_sharer">
