На форме добавления показываем код страны

--- a/templates/city/add.sm.html
+++ b/templates/city/add.sm.html
@@ -46,6 +46,7 @@
                     {$item.country}
                     <input type="hidden" name="country_name" value="{$item.country}" />
                     <input type="hidden" name="country_id" value="{$item.country_id}" />
+                    <input type="hidden" name="country_code" value="{$item.country_code}" />
                 </td>
                 <td>
                     {$item.latlon}
