Ссылка на источник активная

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -92,7 +92,7 @@
         </td>
         <td rowspan="2" class="h_valign_top">
             <b>Источник:</b><br/>
-            {$claim.cp_referer}
+            <a href="{$claim.cp_referer}" target="_blank">{$claim.cp_referer}</a>
         </td>
     </tr>
     <tr>
