Не пишем, что у нас нет достопримечательностей Беларуси

--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -159,7 +159,7 @@
     </table>
     {/if}
     {else}
-    {if $city.pc_id != 120}
+    {if !in_array($city.pc_id, array(120,123,124))}
     <p>Как видите, о достопримечательностях пока информации нет. Если хотите помочь ресурсу, <a href="/feedback/">напишите нам</a>.</p>
     {/if}
     {/if}
