Добавил текст о кафе и гостиницах на форме добавления

--- a/templates/feedback/addpoint.sm.html
+++ b/templates/feedback/addpoint.sm.html
@@ -1,5 +1,8 @@
 <h3>Добавление объекта</h3>
-<p>Если вы считаете, что на сайте не хватает какого-либо объекта, просто заполните форму и нажмите "Отправить".</p>
+<p>
+    Если вы считаете, что на сайте не хватает какого-либо объекта, просто заполните форму и нажмите "Отправить".
+    В качестве объекта может выступать музей, памятник, парк или какое-либо ещё интересное для туристов место. Также мы всегда рады появлению на сайте новых сведений о кафе и гостиницах в вашем городе.
+</p>
 <p>Если хотите, чтоб с вами связались, оставьте свои контактные данные.
     Они не будут опубликованы или использованы в других целях, кроме связи с вами.
     Оставить отзыв по остальным вопросам можно в <a href="/feedback/">"Обратной связи"</a>.</p>
