--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -26,19 +26,34 @@
     <div id="object_contacts_header">Контактная информация</div>
     <ul id="object_contacts">
         {if $object.pt_adress}
-        <li><img src="/img/ico/ico.house.png" alt="адрес" title="Адрес" class="textmarker" /> {$object.pt_adress}</li>
+        <li>
+            <img src="/img/ico/ico.house.png" alt="адрес" title="Адрес" class="textmarker" />
+            <span class="object_contacts_addrs">{$object.pt_adress}</span>
+        </li>
         {/if}
         {if $object.pt_phone}
-        <li><img src="/img/ico/ico.phone.png" alt="телефон" title="Телефон" class="textmarker" /> {$object.pt_phone}</li>
+        <li>
+            <img src="/img/ico/ico.phone.png" alt="телефон" title="Телефон" class="textmarker" />
+            <span class="object_contacts_phone">{$object.pt_phone}</span>
+        </li>
         {/if}
         {if $object.pt_worktime}
-        <li><img src="/img/ico/ico.clock.png" alt="часы работы" title="Часы работы" class="textmarker" /> {$object.pt_worktime}</li>
+        <li>
+            <img src="/img/ico/ico.clock.png" alt="часы работы" title="Часы работы" class="textmarker" />
+            <span class="object_contacts_worktime">{$object.pt_worktime}</span>
+        </li>
         {/if}
         {if $object.pt_website}
-        <li><img src="/img/ico/ico.web.png" alt="сайт" title="Сайт" class="textmarker" /><a href="{$object.pt_website}">{$object.pt_website}</a></li>
+        <li>
+            <img src="/img/ico/ico.web.png" alt="сайт" title="Сайт" class="textmarker" />
+            <a href="{$object.pt_website}" class="object_contacts_web">{$object.pt_website}</a>
+        </li>
         {/if}
         {if $object.pt_email}
-        <li><img src="/img/ico/ico.email.png" alt="e-mail" title="Электронная почта" class="textmarker" />&nbsp;<a href="mailto:{$object.pt_email}">{$object.pt_email}</a></li>
+        <li>
+            <img src="/img/ico/ico.email.png" alt="e-mail" title="Электронная почта" class="textmarker" />
+            <a href="mailto:{$object.pt_email}" class="object_contacts_email">{$object.pt_email}</a>
+        </li>
         {/if}
     </ul>
 </div>
