--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -18,6 +18,15 @@
                 {if $page->canonical}
                 <link rel="canonical" href="https://culttourism.ru{$page->canonical}" />
                 {/if}
+                <script>
+                <script>
+                    var _gaq = window._gaq || [];
+                    window.onerror = function(msg, url, line) {
+                        var preventErrorAlert = true;
+                        _gaq.push(['_trackEvent', 'JS Error', msg, navigator.userAgent + ' -> ' + url + " : " + line, 0, true]);
+                        return preventErrorAlert;
+                    };
+                </script>
                 <!--[if lt IE 9]>
                     <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
                 <![endif]-->
@@ -85,7 +94,7 @@
                                         f();
                                     }
                                 })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/1209661" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-                            <!-- /Yandex.Metrika counter -->
+                            <!-- Google Analytics counter -->
                             <script>  (function (i, s, o, g, r, a, m) {
                                     i['GoogleAnalyticsObject'] = r;
                                     i[r] = i[r] || function () {
