--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -18,15 +18,6 @@
                 {if $page->canonical}
                 <link rel="canonical" href="https://culttourism.ru{$page->canonical}" />
                 {/if}
-                <script>
-                <script>
-                    var _gaq = window._gaq || [];
-                    window.onerror = function(msg, url, line) {
-                        var preventErrorAlert = true;
-                        _gaq.push(['_trackEvent', 'JS Error', msg, navigator.userAgent + ' -> ' + url + " : " + line, 0, true]);
-                        return preventErrorAlert;
-                    };
-                </script>
                 <!--[if lt IE 9]>
                     <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
                 <![endif]-->
@@ -95,7 +86,8 @@
                                     }
                                 })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/1209661" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
                             <!-- Google Analytics counter -->
-                            <script>  (function (i, s, o, g, r, a, m) {
+                            <script type="text/javascript">
+                                (function (i, s, o, g, r, a, m) {
                                     i['GoogleAnalyticsObject'] = r;
                                     i[r] = i[r] || function () {
                                         (i[r].q = i[r].q || []).push(arguments)
@@ -148,7 +140,15 @@
                                     s.parentNode.insertBefore(po, s);
                                 })();
                             </script>
-                        {/literal}<!--/noindex-->
+                            <script type="text/javascript">
+                                var _gaq = window._gaq || [];
+                                window.onerror = function (msg, url, line) {
+                                    var preventErrorAlert = true;
+                                    _gaq.push(['_trackEvent', 'JS Error', msg, navigator.userAgent + ' -> ' + url + " : " + line, 0, true]);
+                                    return preventErrorAlert;
+                                };
+                            </script>
+                            {/literal}<!--/noindex-->
                         </div>
                         <div id="footer_debug">
                             {$debug_info}
