Получаем по клику город в адресе

--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -36,6 +36,7 @@
             <input type="hidden" id="pointadding-item-city-pcid" value="{$claim.cp_citypage_id}" />
             <input type="text" class="pointadding-item-city-suggest m_hide" value="{$claim.cp_city|escape:'html'}" />
             <a href="#" class="pointadding-item-city-pctitle" target="_blank"></a>
+            <input type="button" class="pointadding-item-addr-city" value="↓" />
         </td>
     </tr>
     <tr>
