--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -48,6 +48,7 @@
             <input type="button" class="pointadding-item-geo-set" value="MAP" data-mapstate="0" />
             <input type="button" class="pointadding-item-geo-go m_hide" value="GO" />
             <input type="button" class="pointadding-item-geo-get m_hide" value="FIND" />
+            <input type="button" class="pointadding-item-geo-reverse m_hide" value="GEO" />
         </td>
     </tr>
     <tr>
