--- a/templates/_ajax/changelatlon.form.sm.html
+++ b/templates/_ajax/changelatlon.form.sm.html
@@ -1,6 +1,7 @@
 <p>
     <b>Координаты объекта</b> <span id="obj_name">{$point.pt_name}</span> [{$point.pc_title}]
     {if $point.pt_adress}<br />Адрес: <span id="obj_addr_searcher">{$point.pt_adress}</span>{/if}
+    <input type="button" value="Обновить" class="savereverse" />
 </p>
 <input type="hidden" id="obj_id" value="{$point.pt_id}" />
 <input type="hidden" id="obj_zoom" value="{$point.zoom}" />
@@ -12,6 +13,8 @@
     долгота <input type="text" id="obj_lon" value="{$point.pt_longitude}" />&deg;
 
     <input type="button" value="GO" class="dogo" />
+    <input type="button" value="Адрес" class="doreverse" />
+    &nbsp;&nbsp;&nbsp;&nbsp;
     <span class="formhandler" id="pt_latlon_handler">
         <input type="button" value="сохранить" class="dosave" />
         <input type="button" value="отменить" class="doesc" />
