Отключил режим отладки в Яндекс.картах

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -21,7 +21,7 @@
                 <!--[if lt IE 9]>
                     <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
                 <![endif]-->
-                <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat&mode=debug" defer="defer"></script>
+                <script type="text/javascript" src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat" defer="defer"></script>
                 <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
                 <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
                 {if $page->user.userid}
