Передаем URL с ошибкой в GA

--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -19,3 +19,6 @@
     А еще можно попробовать найти что-нибудь <a href="https://{$host}/map/">на карте</a>.
 </p>
 <div class="m_clear"></div>
+<script type="text/javascript">
+    _gaq.push(['_trackEvent', 'Core Error', '404', document.location.href]);
+</script>
