--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -6,3 +6,6 @@
     <br/>
     Приносим свои извинения за доставленные неудобства.
 </p>
+<script type="text/javascript">
+    _gaq.push(['_trackEvent', 'Core Error', '503', document.location.href]);
+</script>
