--- a/templates/_errors/er403.sm.html
+++ b/templates/_errors/er403.sm.html
@@ -5,3 +5,6 @@
 
 <h2>Forbidden</h2>
 <p>You don't have permission to access <b>https://{$requested}</b> on this server.</p>
+<script type="text/javascript">
+    _gaq.push(['_trackEvent', 'Core Error', '403', document.location.href]);
+</script>
